add docs for feeds & health api
